k8s/k8s-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: blueberryblog
spec:
  selector:
    app: blueberryblog
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: NodePort
